--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>background</title>
 </head>
 <body>
     <h1>Background Generator</h1>
     <input class="color1" type="color" name="color1" value="#ff0000">
     <input class="color2" type="color" name="color2" value="#00ff00">
-    <button>Gerar aleatório</button>
+    <button>random</button>
     <h2>Current CSS Background</h2>
     <h3>linear-gradient(to right, red, yellow);</h3>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
